--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
+.background {
+  background-image: url('../assets/background2.avif');
+  background-size: cover;
+}
+
 .Container {
   justify-content: center; 
 align-items: center;
@@ -7,22 +12,32 @@ margin: auto;
 border-radius: 12px;
 background-image: linear-gradient(180deg, #395da1 0%, #8b80cc 100%);}
 
+.header {
+  text-align: center;
+  color: rgb(14, 3, 3);
+  font-size: 50px;
+  font-weight: 400;
+  margin: auto; 
+
+}
 .Paragraph {
   text-align: center;
   color: white;
-  font-size: 30px;
+  font-size: 26px;
   font-weight: 400;
-  margin-top: 20px;
+  margin: auto; /* Center the paragraph vertically */
 }
 
 .SpecialText {
   font-style: italic;
-  font-family: '', sans-serif; 
+  font-family: '', sans-serif;
+  font-size: 30px;
 }
 
 .LinkContainer {
-  margin-top: auto; 
+  margin-top: auto;
   text-align: center;
+  margin-bottom: 20px; /* Add margin to the bottom */
 }
 
 
